--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,19 +1,12 @@
 homeassistant:
-  # Name of the location where Home Assistant is running
   name: Home
-  # Location required to calculate the time the sun rises and sets
   latitude: !secret lat
   longitude: !secret long
-  # Impacts weather/sunrise data (altitude above sea level in meters)
   elevation: 11
-  # metric for Metric, imperial for Imperial
   unit_system: metric
-  # Pick yours from here: http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
   time_zone: Europe/Stockholm
+  customize: !include customize.yaml
 
-
-
-# Enables the frontend
 frontend:
 
 http:
@@ -28,8 +21,6 @@ updater:
 discovery:
 history:
 logbook:
-
-# Track the sun
 sun:
 
 weather:
@@ -83,6 +74,7 @@ notify:
   platform: pushbullet
   api_key: !secret pushbulletAPI
   name: pushbullet
+
 
 group: !include groups.yaml
 
